--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /target/
 /target/lifetime/target
 /target/lifetime/target/*
+/target/socket/target
+/target/socket/target/*
+/target/actix-web-demo/target
+/target/actix-web-demo/target/*
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
